<resources>
    <string name="app_name">Marvel</string>
    <string name="imagem">name</string>
    <string name="drawerlayout_header">drawerlayout_header</string>
    <string name="action_settings">settings</string>
    <string name="menu_slideshow">slideshow</string>
    <string name="menu_gallery">gallery</string>
    <string name="menu_home">home</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_user">UserName</string>
    <string name="descri_off">Description not found</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="exit">Logout</string>
    <string name="nav_exit_text">Access another account</string>
    <string name="characters">characters</string>
    <string name="favorites">Favorites</string>
    <string name="nav_favorites_text">My favorite characters</string>
    <string name="add_favorites">Add to favorites</string>
    <string name="remove_sucess_favorites">Successfully removed</string>
    <string name="remove_favorites">Remove from favorites</string>
    <string name="successfully_favorites">Added successfully</string>
    <string name="identification">Identification: </string>
    <string name="about">About</string>
    <string name="nav_about_text">Know a little about Marvel</string>
    <string name="btn_characters">CHARACTERS</string>
    <string name="btn_comics">COMICS</string>
    <string name="btn_events">EVENTS</string>
    <string name="btn_creators">CREATORS</string>
    <string name="password">Password</string>
    <string name="email">Email address</string>
    <string name="register">SIGN UP</string>
    <string name="sign">LOG IN</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="problem_server">Problem with server</string>
    <string name="failed">Failed to connect</string>
    <string name="change_image">Change image</string>
    <string name="error_exiting">Error exiting</string>
    <string name="goot">I\'m Groot</string>
    <string name="update">Update</string>
    <string name="panel">Panel</string>
    <string name="fill_in_correctly">Please fill in the fields correctly</string>
    <string name="username_or_password">The username or password you entered is incorrect</string>
    <string name="about_marvel">Marvel was started in 1939 by Martin Goodman under a number of corporations and imprints but now known as Timely Comics, and by 1951 had generally become known as Atlas Comics. The Marvel era began in 1961, the year that the company launched The Fantastic Four and other superhero titles created by Stan Lee, Jack Kirby, Steve Ditko and many others. The Marvel brand, which had been used over the years, was solidified as the company\'s primary brand.</string>
    <string name="facebook_app_id">2985943331504736</string>
    <string name="fb_login_protocol_scheme">fb2985943331504736</string>

</resources>
