<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/nav_favorites_text">
        <menu>
            <item
                android:id="@+id/nav_favoritos"
                android:icon="@drawable/ic_icon_favorite"
                android:title="@string/favorites"
                />
        </menu>
    </item>


    <item android:title="@string/nav_about_text">
        <menu>
            <item
                android:id="@+id/nav_sobre"
                android:icon="@drawable/ic_info_about"
                android:title="@string/about"
                />
        </menu>
    </item>

    <item android:title="@string/nav_exit_text">
        <menu>
            <item
                android:id="@+id/btn_sair"
                android:icon="@drawable/ic_logout"
                android:title="@string/exit"
                />
        </menu>
    </item>
</menu>
