<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9d0c0f"
    tools:context=".view.HomeActivity">

    <include layout="@layout/toolbar"/>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/fundoBranco"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="16dp"
                android:background="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imagePersonagens"
                android:layout_width="0dp"
                android:layout_height="230dp"
                android:layout_marginTop="4dp"
                app:layout_constraintEnd_toEndOf="@id/fundoBranco"
                app:layout_constraintStart_toStartOf="@+id/fundoBranco"
                app:layout_constraintTop_toTopOf="@+id/fundoBranco"
                app:srcCompat="@drawable/characters" />

            <Button
                android:id="@+id/buttonPersonagens"
                android:layout_width="246dp"
                android:layout_height="60dp"
                android:backgroundTint="#CF001C"
                android:text="@string/btn_characters"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imagePersonagens"
                app:layout_constraintEnd_toEndOf="@+id/imagePersonagens"
                app:layout_constraintStart_toStartOf="@+id/imagePersonagens"
                app:layout_constraintTop_toTopOf="@+id/imagePersonagens" />

            <ImageView
                android:id="@+id/imageQuadrinhos"
                android:layout_width="0dp"
                android:layout_height="250dp"
                app:layout_constraintEnd_toEndOf="@id/fundoBranco"
                app:layout_constraintStart_toStartOf="@id/fundoBranco"
                app:layout_constraintTop_toBottomOf="@+id/imagePersonagens"
                app:srcCompat="@drawable/comics" />

            <Button
                android:id="@+id/buttonQuadrinhos"
                android:layout_width="246dp"
                android:layout_height="60dp"
                android:backgroundTint="#CF001C"
                android:text="@string/btn_comics"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imageQuadrinhos"
                app:layout_constraintEnd_toEndOf="@+id/imageQuadrinhos"
                app:layout_constraintStart_toStartOf="@+id/imageQuadrinhos"
                app:layout_constraintTop_toTopOf="@+id/imageQuadrinhos" />

            <ImageView
                android:id="@+id/imageCriadores"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="@id/fundoBranco"
                app:layout_constraintStart_toStartOf="@id/fundoBranco"
                app:layout_constraintTop_toBottomOf="@+id/imageQuadrinhos"
                app:srcCompat="@drawable/criadores" />


            <Button
                android:id="@+id/buttonCriadores"
                android:layout_width="246dp"
                android:layout_height="60dp"
                android:backgroundTint="#CF001C"
                android:text="@string/btn_creators"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imageCriadores"
                app:layout_constraintEnd_toEndOf="@+id/imageCriadores"
                app:layout_constraintStart_toStartOf="@+id/imageCriadores"
                app:layout_constraintTop_toTopOf="@+id/imageCriadores" />

            <ImageView
                android:id="@+id/imageEventos"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="@id/fundoBranco"
                app:layout_constraintStart_toStartOf="@id/fundoBranco"
                app:layout_constraintTop_toBottomOf="@+id/imageCriadores"
                app:srcCompat="@drawable/events" />


            <Button
                android:id="@+id/buttonEventos"
                android:layout_width="246dp"
                android:layout_height="60dp"
                android:backgroundTint="#CF001C"
                android:text="@string/btn_events"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imageEventos"
                app:layout_constraintEnd_toEndOf="@+id/imageEventos"
                app:layout_constraintStart_toStartOf="@+id/imageEventos"
                app:layout_constraintTop_toTopOf="@+id/imageEventos" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>